--- a/Home.html
+++ b/Home.html
@@ -47,7 +47,7 @@
       <ul class="nav navbar-nav navbar-right">
         
         <li id="login_li" data-toggle="modal" data-target="#myModal"><a href="#">Login</a></li>
-        <li><a href="#">Register Now</a></li>
+        <li><a href="register_now.html">Register Now</a></li>
         <li style=" margin-right:15px;">
                   <ul class="marq_nav" style="display:inline-block;" >
           <li id="fb_link" style="padding:10px 0;  display:inline-block;"><img src="img/Facebook.png" width="23" height="23"  onclick=""  style="cursor:pointer;"  /></li>
